--- a/src/components/Spells/styles.module.css
+++ b/src/components/Spells/styles.module.css
@@ -34,17 +34,21 @@ ul {
 }
 
 .classFilter .casterClass.active {
-  background-color: rgb(222, 196, 0);
+  background-color: var(--yellow);
 }
 .spellDetails {
   margin-top: 20px;
-  padding: 10px;
-  width: 100%;
+  padding: 32px 20px 20px 20px;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: rgb(236, 236, 236);
+  background-color: var(--yellow);
 }
 .spellDetails > * {
   margin-bottom: 10px;
+  line-height: 1.6rem;
+  font-size: 1.1rem;
+}
+.spellDetails p {
 }
