--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -3,7 +3,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   background-color: rgb(255, 248, 248);
+  min-height: 150vh;
 }
