--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,10 +1,9 @@
 .main {
-  padding: 20px;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: rgb(255, 248, 248);
+  background-color: var(--background);
   min-height: 150vh;
 }
