--- a/src/components/Spells/styles.module.css
+++ b/src/components/Spells/styles.module.css
@@ -1,58 +1,88 @@
-.main {
+.mainWrapper {
+  position: relative;
   width: 100%;
   max-width: 1000px;
-  display: grid;
-  grid-template-columns: 20% 80%;
-  grid-template-rows: auto;
-  grid-template-areas:
-    'header header'
-    'sidebar main';
-  box-sizing: border-box;
+  min-height: 101vh;
+}
+.main {
+  width: 100%;
+  display: flex;
+}
+.headerWrapper {
+  background-color: var(--background);
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header {
+  display: flex;
+  padding: 20px 0;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 1000px;
+  width: 100%;
 }
 .spells {
-  grid-area: main;
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
 }
 .spell {
   width: 100%;
-  padding: 0 20px 20px 0;
-  box-sizing: border-box;
+  padding: 0 0 20px 0;
 }
 .spellName {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600;
   cursor: pointer;
 }
-ul {
-  list-style: none;
-}
 .classFilter {
-  grid-area: header;
-  margin: 0 0 40px 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
-  width: 100%;
+  justify-content: space-between;
 }
-.classFilter .filter {
+.levelFilter {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.filter {
   display: flex;
   justify-content: center;
   padding: 10px;
-}
-.filter {
   cursor: pointer;
+  height: 36px;
 }
 .filter.active {
-  background-color: var(--yellow);
+  border-bottom: 3px solid var(--yellow);
 }
+.filter:first-child {
+  padding-left: 0;
+}
+.filter:last-child {
+  padding-right: 0;
+}
+.searchFilter {
+  height: 25px;
+  width: 20%;
+  font-size: 1rem;
+}
+
 .spellDetails {
   margin-top: 20px;
-  padding: 32px 20px 20px 20px;
-  max-width: 600px;
+  padding: 0px 20px 0px 10px;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: var(--yellow);
 }
 .spellDetails > * {
   line-height: 1.6rem;
@@ -64,25 +94,20 @@ ul {
 .spellDetails p {
 }
 
-.levelFilter {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.mobileHeader {
+  display: none;
 }
-.levelFilter .filter {
-  margin-bottom: 10px;
-  padding: 10px 20px;
-}
-.sidebar {
-  grid-area: sidebar;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.searchFilter {
-  margin: 0 0 10px 0;
-  width: 70%;
-  height: 25px;
-  font-size: 1rem;
+@media screen and (max-width: 700px) {
+  .header {
+    justify-content: center;
+  }
+  .main {
+    padding: 0 20px;
+  }
+  .spells {
+    margin-top: 120px;
+  }
+  .searchFilter {
+    display: none;
+  }
 }
