--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,9 +1,12 @@
 .main {
   width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background-color: var(--background);
-  min-height: 150vh;
 }
