--- a/src/components/Spells/styles.module.css
+++ b/src/components/Spells/styles.module.css
@@ -1,35 +1,42 @@
-.mainWrapper {
-  position: relative;
-  width: 100%;
-  max-width: 1000px;
-  min-height: 101vh;
-}
 .main {
-  width: 100%;
-  display: flex;
-}
-.headerWrapper {
-  background-color: var(--background);
-  z-index: 100;
-  position: fixed;
-  width: 100%;
-  left: 0;
+  position: absolute;
   top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
 }
 .header {
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 20px 0;
-  flex-direction: row;
+  width: 100%;
+  height: 80px;
+  background-color: #fdfdfd;
+}
+.body {
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  flex: 1;
+  background-color: #f0efef;
+  overflow: scroll;
+}
+.container {
+  width: 100%;
+  max-width: 1000px;
+  display: flex;
+}
+.header .container {
   justify-content: space-between;
   flex-wrap: wrap;
-  max-width: 1000px;
-  width: 100%;
+  flex-direction: row;
 }
 .spells {
-  margin-top: 100px;
   display: flex;
   flex-direction: column;
 }
@@ -71,11 +78,12 @@
   padding-right: 0;
 }
 .searchFilter {
-  height: 25px;
+  height: 30px;
   width: 20%;
   font-size: 1rem;
+  border: 1px solid #cecece;
+  border-radius: 5px;
 }
-
 .spellDetails {
   margin-top: 20px;
   padding: 0px 20px 0px 10px;
@@ -98,16 +106,7 @@
   display: none;
 }
 @media screen and (max-width: 700px) {
-  .header {
-    justify-content: center;
-  }
-  .main {
-    padding: 0 20px;
-  }
-  .spells {
-    margin-top: 120px;
-  }
-  .searchFilter {
-    display: none;
+  .container {
+    max-width: 100%;
   }
 }
