mobile stylesheet tweaks

--- a/src/components/Spells/styles.module.css
+++ b/src/components/Spells/styles.module.css
@@ -36,47 +36,6 @@
   flex-wrap: wrap;
   flex-direction: row;
 }
-.spells {
-  display: flex;
-  flex-direction: column;
-}
-.spell {
-  width: 100%;
-  padding: 0 0 20px 0;
-}
-.spellName {
-  font-size: 1.4rem;
-  font-weight: 600;
-  cursor: pointer;
-}
-.classFilter {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.levelFilter {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.filter {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
-  cursor: pointer;
-  height: 36px;
-}
-.filter.active {
-  border-bottom: 3px solid var(--yellow);
-}
-.filter:first-child {
-  padding-left: 0;
-}
-.filter:last-child {
-  padding-right: 0;
-}
 .searchFilter {
   height: 30px;
   width: 20%;
@@ -84,29 +43,21 @@
   border: 1px solid #cecece;
   border-radius: 5px;
 }
-.spellDetails {
-  margin-top: 20px;
-  padding: 0px 20px 0px 10px;
-  max-width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-.spellDetails > * {
-  line-height: 1.6rem;
-  font-size: 1.1rem;
-}
-.spellDetails > *:last-child {
-  margin-top: 10px;
-}
-.spellDetails p {
-}
 
-.mobileHeader {
-  display: none;
-}
 @media screen and (max-width: 700px) {
-  .container {
-    max-width: 100%;
+  .body {
+    padding-top: 10px;
+  }
+  .header {
+    height: 100px;
+  }
+  .header .container {
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+  .searchFilter {
+    display: none;
   }
 }
