--- a/src/components/Spells/SpellRow/styles.module.css
+++ b/src/components/Spells/SpellRow/styles.module.css
@@ -15,6 +15,7 @@
 }
 .name {
   font-weight: 600;
+  font-size: 1.1rem;
 }
 .details {
   display: flex;
@@ -33,4 +34,24 @@
 }
 .extra > div {
   line-height: 1.6rem;
+}
+@media screen and (max-width: 700px) {
+  .details {
+    display: none;
+  }
+  .essential {
+    margin: 0 10px;
+  }
+  .extra {
+    margin: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .extra > div {
+    line-height: 1.6rem;
+    font-size: 0.9rem;
+  }
+  .name {
+    font-size: 1.2rem;
+  }
 }
