--- a/src/components/Spells/SpellRow/styles.module.css
+++ b/src/components/Spells/SpellRow/styles.module.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 3rem;
+  height: 3.2rem;
   cursor: pointer;
 }
 .name {
@@ -26,21 +26,32 @@
   justify-content: flex-start;
   width: 160px;
 }
+.details .concentrationColumn {
+  width: 50px;
+  font-weight: 600;
+}
 .extra {
   padding: 26px 20px;
-  margin: 20px 0;
+  margin: 0;
   width: 100%;
   background: white;
 }
 .extra > div {
   line-height: 1.6rem;
 }
+.showOnSmallScreen {
+  display: none;
+}
 @media screen and (max-width: 700px) {
+  .showOnSmallScreen {
+    display: block;
+  }
   .details {
     display: none;
   }
   .essential {
-    margin: 0 10px;
+    margin: 0;
+    padding: 0 10px;
   }
   .extra {
     margin: 0;
