--- a/src/components/Spells/styles.module.css
+++ b/src/components/Spells/styles.module.css
@@ -49,7 +49,7 @@
     padding-top: 10px;
   }
   .header {
-    height: 100px;
+    height: 140px;
   }
   .header .container {
     justify-content: center;
@@ -58,7 +58,7 @@
     flex-direction: column;
   }
   .searchFilter {
-    display: none;
+    /* display: none; */
     margin-top: 10px;
     width: 80%;
   }
