--- a/src/components/Spells/styles.module.css
+++ b/src/components/Spells/styles.module.css
@@ -35,6 +35,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   flex-direction: row;
+  align-items: center;
 }
 .searchFilter {
   height: 30px;
@@ -42,6 +43,12 @@
   font-size: 1rem;
   border: 1px solid #cecece;
   border-radius: 5px;
+}
+.icon {
+  cursor: pointer;
+}
+.icon.active path {
+  fill: var(--yellow);
 }
 
 @media screen and (max-width: 700px) {
