--- a/src/index.css
+++ b/src/index.css
@@ -26,13 +26,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-div, input {
+div,
+input {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-}
-
-input:focus {
-  outline:none !important;
-  border: 1px solid var(--yellow);
 }
